--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Document</title>
     </head>
 <body>
-    <center><video width="400" height="300" controls autoplay>
+    <center><video width="400" height="300" autoplay>
         <source src="aad.mp4" type="video/mp4">
       </video></center>
 </body>
