--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <video autoplay loop >
+  <video autoplay controls loop >
     <source src="bg.mp4" type="video/mp4">
   </video>
 </body>
